# secondhand-marketplace

./: .gitignore  README.md  docker-compose.yml  start.ps1  stop.ps1
backend/: .env.example  Dockerfile  README.md  alembic.ini  fix_types.py  mypy_output.txt  pyproject.toml  seed_data.py
backend/alembic/: env.py
backend/alembic/versions/: 5f3ea9cb031e_sprint_2_add_search_and_listing_fields.py  75d6788d1c8a_add_performance_indexes.py  7b19759ade0a_sprint_3_advanced_transactions_fields.py  ab07b3324ca1_add_sprint_1_social_models_and_profile_.py  ef0a95542ad9_initial_schema.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  chat.py  health.py  listings.py  moderation.py  social.py  transactions.py  users.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  associations.py  chat.py  enums.py  listing.py  mixins.py  moderation.py  social.py  transaction.py  user.py
backend/app/schemas/: auth.py  chat.py  listing.py  moderation.py  social.py  transaction.py  user.py
backend/app/services/: auth.py  chat.py  listings.py  moderation.py  transactions.py
backend/scripts/: seed_demo.py  seed_sprint3.py
backend/tests/: conftest.py  test_auth.py  test_listings.py  test_social_moderation.py  test_soft_delete.py  test_transactions.py
docs/: PROJECT_DOCUMENTATION.md  RUN_LOG_AND_TROUBLESHOOTING.md
frontend/: Dockerfile  build_output.txt  build_output_utf8.txt  eslint.config.mjs  package-lock.json  package.json
(+54 files in other folders)
